Clouds colors and flash

--- a/src/components/Strengths.astro
+++ b/src/components/Strengths.astro
@@ -43,7 +43,7 @@ import Eclair from "./Eclair.astro";
   .strengths {
     background: linear-gradient(to bottom, #141e36, #030510);
     position: relative;
-    padding: 15rem 12%;
+    padding: 5rem 12% 15rem 12%;
     display: flex;
     flex-direction: column;
     gap: 5rem;
@@ -65,6 +65,7 @@ import Eclair from "./Eclair.astro";
       text-align: end;
       align-self: end;
       right: -16%;
+      z-index: 10;
     }
     .services {
       display: flex;
