--- a/src/components/Clouds.astro
+++ b/src/components/Clouds.astro
@@ -1,9 +1,9 @@
 <div class='clouds'>
-  <div class='clouds cloud1'></div>
+  <!-- <div class='clouds cloud1'></div> -->
   <div class='clouds cloud2'></div>
   <div class='clouds cloud3'></div>
   <div class='clouds cloud4'></div>
-  <div class='clouds cloud5'></div>
+  <!-- <div class='clouds cloud5'></div> -->
   <div class='clouds cloud6'></div>
 </div>
 
@@ -24,24 +24,13 @@
     left: 0;
     opacity: 0.6;
     z-index: 7;
-    &::after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: radial-gradient(closest-side, #fff, #ffffff00);
-      animation: flash 10s infinite linear;
-    }
   }
   .cloud2 {
     background-image: url("/images/clouds3.webp");
     width: 80%;
     aspect-ratio: 2360 / 984;
     top: -1rem;
-    left: -20%;
+    left: -10%;
     z-index: 6;
     opacity: 0.9;
   }
@@ -53,33 +42,33 @@
     left: 60%;
     opacity: 0.5;
     z-index: 8;
-    &::after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: radial-gradient(closest-side, #fff, #ffffff00);
-      animation: flash 10s 0.2s infinite linear;
-    }
   }
   .cloud4 {
     background-image: url("/images/clouds3.webp");
-    width: 55%;
+    width: 150%;
     aspect-ratio: 2360 / 984;
     top: 4rem;
-    left: 30%;
-    opacity: 0.5;
-    z-index: 9;
+    left: -30%;
+    z-index: 2;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 30%;
+      height: 30%;
+      top: 40%;
+      left: 30%;
+      transform: translate(-50%, -50%);
+      background: radial-gradient(closest-side, #fff, #ffffff00);
+      z-index: -1;
+      animation: flash 10s infinite linear;
+    }
     &::after {
       content: "";
       position: absolute;
-      width: 100%;
-      height: 100%;
+      width: 30%;
+      height: 30%;
       top: 50%;
-      left: 50%;
+      left: 40%;
       transform: translate(-50%, -50%);
       background: radial-gradient(closest-side, #fff, #ffffff00);
       z-index: -1;
@@ -93,18 +82,28 @@
     top: 1rem;
     right: -20%;
     z-index: 6;
-    opacity: 0.9;
   }
   .cloud6 {
     background-image: url("/images/clouds3.webp");
-    width: 80%;
+    width: 100%;
     aspect-ratio: 2360 / 984;
     top: 0;
-    left: 10%;
-    z-index: 6;
-    opacity: 0.7;
+    left: 0;
+    z-index: 3;
+    opacity: 0.5;
     transform-origin: center center;
     transform: translate(0, -50%) rotate(180deg);
+    &::before {
+      content: "";
+      position: absolute;
+      width: 40%;
+      height: 40%;
+      top: 50%;
+      left: 40%;
+      transform: translate(-50%, -50%);
+      background: radial-gradient(closest-side, #fff, #ffffff00);
+      animation: flash 10s 0.2s infinite linear;
+    }
   }
   @keyframes flash {
     0% {
