--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -455,6 +455,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
     position: absolute;
     width: 50%;
     max-height: calc(100vh - 15rem);
+    height: calc(100vh - 15rem);
     top: 50%;
     left: 37%;
     @for $i from 0 through 25 {
