--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -14,7 +14,7 @@ const {
 
 <div class=`projectCard ${className}`>
   <div class='mockup'>
-    <img src={mockup} alt={mockupName} width="2755" height="1800" />
+    <img src={mockup} alt={mockupName} width='2755' height='1800' />
   </div>
   <div class='description'>
     <h2>{clientName}</h2>
@@ -32,16 +32,17 @@ const {
     .mockup {
       min-height: 0;
       flex-shrink: 1;
-      display: flex;
     }
     :global(img) {
       object-fit: contain;
       object-position: left bottom;
-      height: auto;
+      height: fit-content;
       border: 1px solid #ffffff80;
       border-radius: 1rem;
       min-width: 0;
-        width: max-content;
+      width: max-content;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   .description {
