Fix header centering

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -82,6 +82,9 @@ const currentPath = pathname.slice(1);
     .menuMobileButton {
       display: none;
     }
+    :global(.headerButton) {
+      margin-left: auto;
+    }
   }
   #logo {
     margin-right: auto;
