--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer>
   <div class='links'>
     <a href='#'>Mentions Légales</a>
-    <a target='blank' href='www.linkedin.com/in/kevin-lanvin-0208281b5'>LinkedIn</a>
+    <a target='blank' href='https://www.linkedin.com/in/kevin-lanvin-0208281b5'>LinkedIn</a>
     <a target='blank' href='https://www.malt.fr/profile/kevinlanvin?overview'>Malt</a>
   </div>
   <span class='design'
