--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -67,7 +67,7 @@ import BorderedButton from "./BorderedButton.astro";
       display: flex;
       gap: 5rem;
       margin: 0 12%;
-      margin-bottom: 10rem;
+      z-index: 1;
     }
     .gridImage {
       flex: 1;
@@ -85,7 +85,7 @@ import BorderedButton from "./BorderedButton.astro";
   @media screen and (max-width: 600px) {
     .lastWork {
       padding: 0 1rem;
-      padding-top: 35rem;
+      padding-top: 40rem;
       gap: 5rem;
       h2 {
         font-size: 3rem;
