--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -136,11 +136,11 @@ import Footer from "../components/Footer.astro";
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    width: 100vw;
+    width: 100%;
   }
 
   section {
-    max-width: 100vw;
+    max-width: 100%;
     overflow-x: clip;
   }
 
@@ -200,9 +200,7 @@ import Footer from "../components/Footer.astro";
       color: white;
       max-width: 80%;
       z-index: 10;
-      text-shadow:
-        0px 0px 20px #000000aa,
-        0px 0px 0.2em #000000aa;
+      text-shadow: 0px 0px 20px #000000;
     }
     .subtitle {
       font-size: 3rem;
