--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -539,7 +539,9 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
     }
     .contactMe {
       width: 80%;
-      top: 40% !important;
+      top: 50% !important;
+      transform: translate3d(-50%, -50%, calc(var(--gap) * (var(--nbElements) - 1) * -1px)) !important;
+      text-align: center;
     }
   }
 </style>
