--- a/src/components/SimpleSection.astro
+++ b/src/components/SimpleSection.astro
@@ -84,6 +84,7 @@
     }
     p {
       color: white;
+      font-weight: bold;
       font-size: 5rem;
       line-height: 5rem;
       text-align: center;
@@ -118,6 +119,7 @@
       p {
         padding: 2rem;
         font-size: 1.5rem;
+        line-height: 2rem;
         border-radius: 2rem;
       }
       .border-container {
