--- a/src/components/Strengths.astro
+++ b/src/components/Strengths.astro
@@ -95,13 +95,13 @@ import Eclair from "./Eclair.astro";
       padding: 0 1rem;
       h2 {
         font-size: 3rem;
-        margin-top: 5rem;
         right: -1rem;
       }
       .services {
         padding-top: 0;
         padding-bottom: 10rem;
         gap: 10rem;
+        z-index: 10;
         .service {
           gap: 1rem;
           p {
