--- a/src/components/Clouds.astro
+++ b/src/components/Clouds.astro
@@ -142,7 +142,9 @@
       top: -2rem
     }
     .cloud4 {
-      top: 1rem;
+      top: -2rem;
+      width: 250%;
+      left: -75%;
     }
   }
 </style>
