--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -16,7 +16,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
         className='scrollableCard'
         clientName='Lamie Mutuelle'
         projectDescription="Réalisation d'un site vitrine NuxtJS alimenté par le CMS Strapi. Ajout d'un tunnel de commande complexe 100% paramétrable."
-        link='lamie-mutuelle.com'
+        link='https://lamie-mutuelle.com'
         linkLabel='Voir le site'
         mockup='/images/project-lamie.webp'
         mockupName='Lamie Mutuelle'
@@ -32,7 +32,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
         className='scrollableCard'
         clientName='Pauline Gorlier, Praticienne Bien-Être'
         projectDescription='Site vitrine alimenté par le CMS git-based Decap.'
-        link='pauline-gorlier.com'
+        link='https://pauline-gorlier.com'
         linkLabel='Voir le site'
         mockup='/images/project-pauline.webp'
         mockupName='Pauline Gorlier'
