--- a/src/components/AllTechnologies.astro
+++ b/src/components/AllTechnologies.astro
@@ -1,5 +1,6 @@
 ---
 import BorderedButton from "./BorderedButton.astro";
+import Partners from "./Partners.astro";
 ---
 
 <section class='allTechnologies'>
@@ -47,6 +48,7 @@ import BorderedButton from "./BorderedButton.astro";
   <BorderedButton link='/portfolio' addedClasses='centeredButton'
     >Voir mes réalisations</BorderedButton
   >
+  <Partners inverted title={ false }></Partners>
 </section>
 
 <style lang='scss'>
