--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -114,9 +114,9 @@ import BorderedButton from "./BorderedButton.astro";
       gap: 2rem;
       background: url("/images/ecosse-background-mobile.webp");
       background-size: cover;
+      background-position: center;
       &::before {
-        background: url("/images/train-mobile.webp");
-        background-size: cover;
+        display: none;
       }
       h2 {
         font-size: 2rem;
