--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -142,6 +142,9 @@
       padding: 0 1rem;
       padding-top: 15rem;
       gap: 5rem;
+      background: url("/images/frog-mobile.webp");
+      background-size: cover;
+      background-position: center;
       h2 {
         font-size: 3rem;
         margin-right: -1rem;
