--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -25,6 +25,7 @@
     background-image: url("/images/bg.webp");
     background-color: #000;
     background-size: cover;
+    background-position: top center;
     background-repeat: no-repeat;
     z-index: 2;
     &::after {
