--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -19,7 +19,7 @@ const {
   <div class='description'>
     <h2>{clientName}</h2>
     <p>{projectDescription}</p>
-    {link && <BorderedButton link={link}>{linkLabel}</BorderedButton>}
+    {link && <BorderedButton link={link} newTab>{linkLabel}</BorderedButton>}
   </div>
 </div>
 
